# engram

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SPRINT-1-WORKING-MEMORY.md  engram-agent-readiness-spec.md  eslint.config.js  operative-engram-integration-spec.md  package-lock.json  package.json  vitest.config.ts
docs/: CPU-EXTRACTION-TIER1-SPEC.md  GENERATION-PROVIDER-SPEC.md  GROUNDING-LAYER-SPEC.md  OPENCLAW-INTEGRATION.md  PI-INTEGRATION.md
engram-aql/: .gitignore  Cargo.toml  README.md
engram-aql/src/: error.rs  exec_ctx.rs  executor.rs  lib.rs  main.rs  memory_map.rs  result.rs  schema.rs
engram-aql/src/bridge/: call.rs  child.rs  client.rs  embed.rs  mod.rs
engram-aql/src/mcp/: handlers.rs  mod.rs  protocol.rs
engram-aql/src/sql/: conditions.rs  fields.rs  mod.rs  serialize.rs  values.rs
engram-aql/src/statements/: graph.rs  load.rs  lookup.rs  mod.rs  pipeline.rs  recall.rs  scan.rs  write_delegate.rs  write_reject.rs
engram-aql/src/subcommand/: mcp.rs  mod.rs  query.rs  repl.rs
engram-aql/src/vector/: codec.rs  cosine.rs  mod.rs
engram-aql/tests/: aggregate.rs  bridge_embed.rs  graph.rs  load.rs  lookup.rs  mcp_roundtrip.rs  memory_map.rs  pipeline.rs  recall.rs  scan.rs  schema_compat.rs  sql_builder.rs  subcommand_query.rs  vector_cosine.rs  vector_search.rs  write_delegate.rs  write_rejection.rs
engram-aql/tests/common/: mod.rs
engram-aql/tests/fixtures/: seed.sql
evals/: README.md  fixture-builder.ts  metrics.ts  results.json  run.ts  tsconfig.json  types.ts
examples/: basic-usage.ts
integrations/: README.md
skills/: engram.md  (+1 more)
(+106 files in other folders)
